--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 spring.profiles.active=local
 spring.application.name=DealingArt
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=false
 
 
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
 spring.datasource.username=admin
 spring.datasource.password=admin123!!
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+devtools.livereload.enabled=true
 
 #update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=update
@@ -29,11 +31,11 @@ logging.level.org.hibernate.type.descriptor.sql=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 #view 파일 경로
-#spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/views/
 
 #view 파일 확장자명
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.suffix=.jsp
 
 #CSS, JS 파일 경로
-#spring.mvc.static-path-pattern=/resources/**
+spring.mvc.static-path-pattern=/resources/**
 
