--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.profiles.active=local
 spring.application.name=DealingArt
-#spring.thymeleaf.mode=HTML
-#spring.thymeleaf.encoding=UTF-8
-#spring.thymeleaf.check-template-location=true
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
