--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=admin123!!
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
-devtools.livereload.enabled=true
+spring.devtools.livereload.enabled=true
 
 #update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=update
@@ -39,3 +39,14 @@ spring.mvc.view.suffix=.jsp
 #CSS, JS 파일 경로
 spring.mvc.static-path-pattern=/resources/**
 
+#server port 설정
+server.port=8088
+
+# model 프로퍼티 camel case 설정
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# xml파일 result type에 패키지명을 생략할 수 있도록 alias 설정
+mybatis.type-aliases-package=com.da
+
+# Mybatis mapper 위치 설정
+mybatis.mapper-locations=mapper/*.xml
