샘플페이지 개발 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,26 +9,33 @@ spring.thymeleaf.cache=false
 
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
-spring.datasource.username=admin
-spring.datasource.password=admin123!!
+#spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
+#spring.datasource.username=admin
+#spring.datasource.password=admin123!!
+spring.datasource.url=jdbc:mariadb://dealingart-rds-instance.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com:3306/dealing_art_db
+spring.datasource.username=root
+spring.datasource.password=Eowjxor9##
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
 
 #update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
+# Hibernate DB 설정 
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB102Dialect
 
 #To beautify or pretty print the SQL
 spring.jpa.properties.hibernate.format_sql=true
 
 #SQL문 확인하기
 spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
 #디버깅으로 hibernate parameter 확인하기
-logging.level.org.hibernate.type.descriptor.sql=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.SQL=trace
 
 #view 파일 경로
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -41,12 +48,3 @@ spring.mvc.static-path-pattern=/resources/**
 
 #server port 설정
 server.port=8088
-
-# model 프로퍼티 camel case 설정
-mybatis.configuration.map-underscore-to-camel-case=true
-
-# xml파일 result type에 패키지명을 생략할 수 있도록 alias 설정
-mybatis.type-aliases-package=com.da
-
-# Mybatis mapper 위치 설정
-mybatis.mapper-locations=mapper/*.xml
