주석 추가 및 db 연결정보 mysql로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
 #spring.datasource.username=admin
 #spring.datasource.password=admin123!!
-spring.datasource.url=jdbc:mariadb://dealingart-rds-instance.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com:3306/dealing_art_db
+spring.datasource.url=jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db
 spring.datasource.username=root
 spring.datasource.password=Eowjxor9##
 server.servlet.encoding.charset=utf-8
@@ -21,12 +21,13 @@ server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
 
 #update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
-# Hibernate DB 설정 
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB102Dialect
+# Hibernate DB 설정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #To beautify or pretty print the SQL
+spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql=true
 
 #SQL문 확인하기
