--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
 
 #update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Hibernate DB 설정
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
