--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 	        <groupId>com.querydsl</groupId>
 	        <artifactId>querydsl-jpa</artifactId>
 	    </dependency>
+	    
+	    <dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
