--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,24 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
 #spring.datasource.username=admin
 #spring.datasource.password=admin123!!
-spring.datasource.url=jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db
+spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db
 spring.datasource.username=root
 spring.datasource.password=Eowjxor9##
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
+
+logging.level.jdbc.sqlonly=off
+logging.level.jdbc.sqltiming=info
+logging.level.jdbc.resultsettable=info
+logging.level.jdbc.audit=off
+logging.level.jdbc.resultset=off
+logging.level.jdbc.connection=off
 
 #update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=none
