파일업로드 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,20 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
 
+#AWS S3 연동
+cloud.aws.credentials.accessKey=AKIA4I27FJNWXA7W42W6
+cloud.aws.credentials.secretKey=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
+cloud.aws.stack.auto=false
+
+#AWS S3 Service bucket
+cloud.aws.s3.bucket=dealingart-s3
+cloud.aws.region.static=ap-northeast-2
+
+# AWS S3 Bucket URL
+cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/dealingart-s3
+
+
+#myBatis 쿼리 보기 위하여
 logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=info
 logging.level.jdbc.resultsettable=info
