--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,38 @@
 			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
 			<version>1.16</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-aws-autoconfigure</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-bom</artifactId>
+		    <version>1.12.174</version>
+		    <type>pom</type>
+		    <scope>import</scope>
+		</dependency>
+		
+  		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-s3</artifactId>
+		    <version>1.12.174</version>
+		</dependency>
 	</dependencies>
 
 	<build>
