mysql log4jdbc 오류, aws s3 connect 오류 해결, fileVo 생성, 파일 업로드 및 삭제 기능 구현, aws s3 buket 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,22 +15,22 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db
 spring.datasource.username=root
 spring.datasource.password=Eowjxor9##
+
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.devtools.livereload.enabled=true
 
+logging.level.com.amazonaws.util.EC2MetadataUtils:error
+
 #AWS S3 연동
-cloud.aws.credentials.accessKey=AKIA4I27FJNWXA7W42W6
-cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.accessKey=AKIA4I27FJNW7LLQVTVS
+cloud.aws.credentials.secretKey=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
 cloud.aws.stack.auto=false
 
 #AWS S3 Service bucket
-cloud.aws.s3.bucket=dealingart-s3
+cloud.aws.s3.bucket=dealingart-resorce
 cloud.aws.region.static=ap-northeast-2
-
-# AWS S3 Bucket URL
-cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/dealingart-s3
 
 
 #myBatis 쿼리 보기 위하여
