1. AES 암호화 2. 행안부 주소 정보 가져오기 재업

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,3 +70,10 @@ spring.mvc.static-path-pattern=/resources/**
 
 #server port 설정
 server.port=8088
+
+#enc/dec key 16, 24, 32 byte만 허용
+est.dealing.aes.key=DealingArtEstPjt
+
+#행안부 주소 api 개발용 key due 06.07
+est.dealing.juso.url=https://www.juso.go.kr/addrlink/addrLinkApiJsonp.do
+est.dealing.juso.key=devU01TX0FVVEgyMDIyMDMwNzE2NTA1NDExMjMyMDA=
