--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,18 @@
 		    <artifactId>aws-java-sdk-s3</artifactId>
 		    <version>1.12.174</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
 	</dependencies>
 
 	<build>
