--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,20 @@ est.dealing.aes.key=DealingArtEstPjt
 #행안부 주소 api 개발용 key due 06.07
 est.dealing.juso.url=https://www.juso.go.kr/addrlink/addrLinkApiJsonp.do
 est.dealing.juso.key=devU01TX0FVVEgyMDIyMDMwNzE2NTA1NDExMjMyMDA=
+
+#ncloud
+est.dealing.ncloud.accesskey=lLlNXVYJh7kJwSQGcafs
+est.dealing.ncloud.secretkey=ObHr5bZnYDu2rszAVAsAsx6dsnpmqDQzYuqvruXu
+
+est.dealing.ncloud.sms.url=https://sens.apigw.ntruss.com
+est.dealing.ncloud.sms.uri=/sms/v2/services
+est.dealing.ncloud.sms.type=LMS
+est.dealing.ncloud.sms.serviceid=ncp:sms:kr:282194469306:dealing-art
+est.dealing.ncloud.sms.secretkey=b387a6fe3fba40c7b710da91fe75dd5a
+est.dealing.ncloud.sms.contenttype=COMM
+est.dealing.ncloud.sms.number=
+
+est.dealing.ncloud.mail.url=https://mail.apigw.ntruss.com
+est.dealing.ncloud.mail.uri=/api/v1/mails
+est.dealing.ncloud.mail.sender=dev@dealing-art.com
+est.dealing.ncloud.mail.sendername=dealingart
