SMS(LMS) 적용 테스트 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,13 +74,13 @@ est.dealing.juso.key=devU01TX0FVVEgyMDIyMDMwNzE2NTA1NDExMjMyMDA=
 est.dealing.ncloud.accesskey=lLlNXVYJh7kJwSQGcafs
 est.dealing.ncloud.secretkey=ObHr5bZnYDu2rszAVAsAsx6dsnpmqDQzYuqvruXu
 
-est.dealing.ncloud.sms.url=https://sens.apigw.ntruss.com
+est.dealing.ncloud.sms.url=https://sens.apigw.ntruss.com/sms/v2/services/ncp:sms:kr:282194469306:dealing-art/messages
 est.dealing.ncloud.sms.uri=/sms/v2/services
 est.dealing.ncloud.sms.type=LMS
 est.dealing.ncloud.sms.serviceid=ncp:sms:kr:282194469306:dealing-art
 est.dealing.ncloud.sms.secretkey=b387a6fe3fba40c7b710da91fe75dd5a
 est.dealing.ncloud.sms.contenttype=COMM
-est.dealing.ncloud.sms.number=
+est.dealing.ncloud.sms.number=07042677371
 
 est.dealing.ncloud.mail.url=https://mail.apigw.ntruss.com
 est.dealing.ncloud.mail.uri=/api/v1/mails
