html로 변경 작업중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+spring.thymeleaf.view-names=thymeleaf/*
 
 #S3 accessKey 파일경로
 spring.profiles.include=s3
