mypage 추가 dael 검색 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
-spring.thymeleaf.view-names=thymeleaf/*
+spring.thymeleaf.view-names=thymeleaf/**
 
 #S3 accessKey 파일경로
 spring.profiles.include=s3
@@ -15,7 +15,7 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
 #spring.datasource.username=admin
 #spring.datasource.password=admin123!!
-spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db
+spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=Eowjxor9##
 
