메인페이 연동 완료 기본 화면 프레임이 없어 payment.jsp 에 function 포함 적용함

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -87,3 +87,23 @@ est.dealing.ncloud.mail.url=https://mail.apigw.ntruss.com
 est.dealing.ncloud.mail.uri=/api/v1/mails
 est.dealing.ncloud.mail.sender=dev@dealing-art.com
 est.dealing.ncloud.mail.sendername=dealingart
+
+est.dealing.mainpay.return.url=http://localhost:8088
+est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
+#est.dealing.mainpay.std.apibase=https://api-std.mainpay.co.kr
+est.dealing.mainpay.rest.url=https://dev-relay.mainpay.co.kr 
+#est.dealing.mainpay.rest.url=https://relay.mainpay.co.kr
+est.dealing.mainpay.apikey=U1FVQVJFLTEwMDAxMTIwMTgwNDA2MDkyNTMyMTA1MjM0
+est.dealing.mainpay.mbrno=100011
+est.dealing.mainpay.mbrrefno=P000000001
+est.dealing.mainpay.userid=merchant001
+est.dealing.mainpay.close.url=/
+est.dealing.mainpay.ready.uri=/v1/payment/ready
+est.dealing.mainpay.pay.uri=/v1/payment/pay
+est.dealing.mainpay.cancel.uri=/v1/payment/net-cancel
+est.dealing.mainpay.cancel.all.uri=/v1/api/payments/payment/cancel
+est.dealing.mainpay.refund.reg.uri=/v1/api/payments/payment/cms/front/register
+est.dealing.mainpay.refund.sel.uri=/v1/api/payments/payment/cms/front/status
+est.dealing.mainpay.refund.can.uri=/v1/api/payments/payment/cms/front/cancel
+est.dealing.mainpay.receipt.trans.uri=/v1/api/payments/payment/cash-receipt/trans
+est.dealing.mainpay.receipt.cancel.uri=/v1/api/payments/payment/cash-receipt/cancel
