--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,13 @@
 			<artifactId>ibmpkcs</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mainpay</groupId>
+			<artifactId>mainpay-sdk1.7-noLogger</artifactId>
+			<version>1.3</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
