--- a/pom.xml
+++ b/pom.xml
@@ -207,13 +207,18 @@
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
-    		<version>2.11.1</version>
-		</dependency>
+    		</dependency>
         
         <dependency> 
         	<groupId>org.springframework.boot</groupId> 
         	<artifactId>spring-boot-starter-webflux</artifactId> 
         </dependency>
+        
+        <dependency>
+		   <groupId>com.stripe</groupId>
+		   <artifactId>stripe-java</artifactId>
+		   <version>20.94.0</version>
+		</dependency>
     
         
 	</dependencies>
