--- a/pom.xml
+++ b/pom.xml
@@ -205,17 +205,23 @@
 		</dependency>
 		
 		<dependency>
+            <groupId>mainpay</groupId>
+            <artifactId>mainpay-sdk1.7-noLogger</artifactId>
+            <version>1.3</version>
+        </dependency>
+	
+		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
     		<version>2.11.1</version>
 		</dependency>
-        
-        <dependency> 
-        	<groupId>org.springframework.boot</groupId> 
-        	<artifactId>spring-boot-starter-webflux</artifactId> 
-        </dependency>
-    
-        
+		
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
