--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Hibernate DB 설정
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.open-in-view=false
 
 #To beautify or pretty print the SQL
 spring.jpa.database=mysql
