파일 업로드 용량 50M 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,3 +108,6 @@ est.dealing.mainpay.refund.sel.uri=/v1/api/payments/payment/cms/front/status
 est.dealing.mainpay.refund.can.uri=/v1/api/payments/payment/cms/front/cancel
 est.dealing.mainpay.receipt.trans.uri=/v1/api/payments/payment/cash-receipt/trans
 est.dealing.mainpay.receipt.cancel.uri=/v1/api/payments/payment/cash-receipt/cancel
+
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
