--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,8 +89,8 @@ est.dealing.ncloud.mail.uri=/api/v1/mails
 est.dealing.ncloud.mail.sender=dev@dealing-art.com
 est.dealing.ncloud.mail.sendername=dealingart
 
-#est.dealing.mainpay.return.url=https://www.dealing-art.com
-est.dealing.mainpay.return.url=http://localhost:80
+est.dealing.mainpay.return.url=https://www.dealing-art.com
+#est.dealing.mainpay.return.url=http://localhost:80
 est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
 #est.dealing.mainpay.std.apibase=https://api-std.mainpay.co.kr
 est.dealing.mainpay.rest.url=https://dev-relay.mainpay.co.kr
