--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,31 +93,31 @@ est.dealing.mainpay.return.url=https://www.dealing-art.com
 #est.dealing.mainpay.return.url=http://localhost:80
 
 #테스트
-est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
+#est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
 #살재
-#est.dealing.mainpay.std.apibase=https://api-std.mainpay.co.kr
+est.dealing.mainpay.std.apibase=https://api-std.mainpay.co.kr
 
 #테스트
-est.dealing.mainpay.rest.url=https://dev-relay.mainpay.co.kr
+#est.dealing.mainpay.rest.url=https://dev-relay.mainpay.co.kr
 #실제
-#est.dealing.mainpay.rest.url=https://relay.mainpay.co.kr
+est.dealing.mainpay.rest.url=https://relay.mainpay.co.kr
 
 #테스트
-est.dealing.mainpay.apikey=U1FVQVJFLTEwMDAxMTIwMTgwNDA2MDkyNTMyMTA1MjM0
+#est.dealing.mainpay.apikey=U1FVQVJFLTEwMDAxMTIwMTgwNDA2MDkyNTMyMTA1MjM0
 #실제
-#est.dealing.mainpay.apikey=U1FVQVJFLTExMTc1NjIwMjIwNjAyMTMzNzUwMDczMjg0
+est.dealing.mainpay.apikey=U1FVQVJFLTExMTc1NjIwMjIwNjAyMTMzNzUwMDczMjg0
 
 #테스트
-est.dealing.mainpay.mbrno=100011
+#est.dealing.mainpay.mbrno=100011
 #실제
-#est.dealing.mainpay.mbrno=111756
+est.dealing.mainpay.mbrno=111756
 
 est.dealing.mainpay.mbrrefno=P000000001
 
 #테스트
-est.dealing.mainpay.userid=merchant001
+#est.dealing.mainpay.userid=merchant001
 #실제
-#est.dealing.mainpay.userid=GA99999999
+est.dealing.mainpay.userid=GA99999999
 
 est.dealing.mainpay.close.url=/
 est.dealing.mainpay.ready.uri=/v1/payment/ready
