개발서버, RDS 접속 정보 주석처리로 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,21 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:mariadb://192.168.0.24:3307/Edu_JSP
 #spring.datasource.username=admin
 #spring.datasource.password=admin123!!
+
+# 운영서버 MYSQL (AUTH : ALL)
 spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=Eowjxor9##
+
+# 개발서버 MYSQL (AUTH : READ ONLY)
+# spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
+# spring.datasource.username=client
+# spring.datasource.password=client123
+
+# 개발서버 MYSQL (AUTH : ALL)
+# spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
+# spring.datasource.username=client
+# spring.datasource.password=client123
 
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
