개발서버 ALL 권한 RDS 접속 정보 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.datasource.password=Eowjxor9##
 
 # 개발서버 MYSQL (AUTH : ALL)
 # spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
-# spring.datasource.username=client
-# spring.datasource.password=client123
+# spring.datasource.username=root
+# spring.datasource.password=Eowjxor9##
 
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
