--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,20 @@
                 </execution>
             </executions>
         </plugin>
+        <!-- 메이븐 tomcat 자동빌드 ubuntu 서버 배포 plugin 시작 (추가일 : 2022.07.01) -->
+        <plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+				<url>https://www.dealing-art.com/manager/text</url> 
+				<server>tomcatSever</server>
+				<path>/DealingArt</path>
+				<username>root</username>
+                   <password>Eowjxor9##</password>
+			</configuration>
+		</plugin>
+		<!-- 메이븐 tomcat 자동빌드 ubuntu 서버 배포 plugin 끝 -->
 		</plugins>
 	</build>
 </project>
