--- a/pom.xml
+++ b/pom.xml
@@ -223,10 +223,16 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>5.0.0</version>
-        </dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi</artifactId>
+    		<version>4.1.2</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi-ooxml</artifactId>
+    		<version>4.1.2</version>
+		</dependency>
         
 	</dependencies>
 	<build>
