--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -103,6 +103,7 @@ est.dealing.ncloud.mail.sendername=dealingart
 
 est.dealing.mainpay.return.url=https://www.dealing-art.com
 #est.dealing.mainpay.return.url=http://localhost:80
+#est.dealing.mainpay.return.url=http://192.168.0.22
 
 #테스트
 #est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
