1차 결제 비과세 적용 / 기타 요청사항 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -101,13 +101,14 @@ est.dealing.ncloud.mail.uri=/api/v1/mails
 est.dealing.ncloud.mail.sender=dev@dealing-art.com
 est.dealing.ncloud.mail.sendername=dealingart
 
+#운영 서버
 est.dealing.mainpay.return.url=https://www.dealing-art.com
-#est.dealing.mainpay.return.url=http://localhost:80
+#로컬 테스트
 #est.dealing.mainpay.return.url=http://192.168.0.22
 
 #테스트
 #est.dealing.mainpay.std.apibase=https://test-api-std.mainpay.co.kr
-#살재
+#실제
 est.dealing.mainpay.std.apibase=https://api-std.mainpay.co.kr
 
 #테스트
