--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.username=admin
 #spring.datasource.password=admin123!!
 
-## 운영서버 MYSQL (AUTH : ALL)
-#spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul&allowMultiQueries=true
-#spring.datasource.username=root
-#spring.datasource.password=Eowjxor9##
+# 운영서버 MYSQL (AUTH : ALL)
+spring.datasource.url=jdbc:log4jdbc:mysql://db-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=Eowjxor9##
 
 # 개발서버 MYSQL (AUTH : READ ONLY)
 # spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
@@ -27,9 +27,9 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 # spring.datasource.password=client123
 
 # 개발서버 MYSQL (AUTH : ALL)
- spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
- spring.datasource.username=root
- spring.datasource.password=Eowjxor9##
+# spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
+# spring.datasource.username=root
+# spring.datasource.password=Eowjxor9##
 
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
