게시물관리 (전체게시물, 댓글 게시물, 신고된 게시물)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 # spring.datasource.password=client123
 
 # 개발서버 MYSQL (AUTH : ALL)
- spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul
+ spring.datasource.url=jdbc:log4jdbc:mysql://db-test-instance-deaingart.c77ohy35nr22.ap-northeast-2.rds.amazonaws.com/deaingart_rds_db?serverTimezone=Asia/Seoul&allowMultiQueries=true
  spring.datasource.username=root
  spring.datasource.password=Eowjxor9##
 
